# vaibe-os

./: .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.ru.md  LICENSE  README.md  README.ru.md
.ai/: GUARDS.md  MANIFESTO-brief.md  MANIFESTO.md  ONTOLOGY.md  router.md
.ai/knowledge/: agile-frameworks.md  ai-standards-landscape.md  batch-operations-patterns.md  devops-practices.md  glossary.md  jtbd-custdev.md  knowledge-curation-guide.md  pmbok7-principles.md  sales-methodologies.md  software-architecture-patterns.md  startup-financial-modeling.md  startup-resources-ru.md  strategy-frameworks.md  tech-stack-reference.md  Современный русский текст - Ильяхов и публицистика.md
.ai/rules/: content-filtering.md  git-commits.md  git-cross-platform.md  interactive-patterns.md  powershell.md  python-venv.md  structure-brief.md  structure.md  tools.md
.claude/agents/: architect.md  explorer.md  reviewer.md
.claude/commands/: daily-briefing.md  evolve.md  inbox-check.md  meeting-processing.md  plan-update.md  project-context-pack.md  (+9 more)
.github/: FUNDING.yml
.vaibe/scripts/pdf_to_markdown/: main.py  pyproject.toml
.vaibe/skills/meeting-processing/scripts/meeting_transcriber/: README.md  config.py  converter.py  formatter.py  main.py  pyproject.toml  transcriber_assemblyai.py  transcriber_whisper.py
.vaibe/skills/png-to-svg/scripts/png_to_svg/: main.py  pyproject.toml
tools/: TOOLS_INDEX.md  __main__.py  process_deferred_kb_source.py
Проекты/: AGENTS.md  CLAUDE.md
(+420 files in other folders)
